--- a/SearchCriteria/Resources/config/service_criteria.yml
+++ b/SearchCriteria/Resources/config/service_criteria.yml
@@ -1,5 +1,5 @@
 services:
-    gpm.sql_expression_builder:
-        class: GPM\Shared\SearchCriteria\Infraestructure\SqlExpressionBuilder
+    sql_expression_builder:
+        class: Shared\SearchCriteria\Infraestructure\SqlExpressionBuilder
         arguments:
             []
